// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Chip should render Default 1`] = `
<DocumentFragment>
  <aside
    class="css-1qi9kls ewiwnhk0"
  >
    <div
      class="css-lgj0h8 ewiwnhk1"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-1w3f93h-AuthorChip e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-lgj0h8 ewiwnhk2"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
            href="https://lasting-parking.org"
          >
            Bob Cummings
          </a>
        </strong>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithClassName 1`] = `
<DocumentFragment>
  <aside
    class="extra-classname css-1qi9kls ewiwnhk0"
  >
    <div
      class="css-lgj0h8 ewiwnhk1"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-1w3f93h-AuthorChip e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-lgj0h8 ewiwnhk2"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
            href="https://lasting-parking.org"
          >
            Bob Cummings
          </a>
        </strong>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithEmotion 1`] = `
<DocumentFragment>
  <aside
    class="css-1qi9kls ewiwnhk0"
  >
    <div
      class="css-lgj0h8 ewiwnhk1"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-1w3f93h-AuthorChip e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-lgj0h8 ewiwnhk2"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
            href="https://lasting-parking.org"
          >
            Bob Cummings
          </a>
        </strong>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithoutImage 1`] = `
<DocumentFragment>
  <aside
    class="css-1qi9kls ewiwnhk0"
  >
    <div
      class="css-lgj0h8 ewiwnhk1"
    />
    <div
      class="css-lgj0h8 ewiwnhk2"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
            href="https://lasting-parking.org"
          >
            Bob Cummings
          </a>
        </strong>
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Corporate Marketing Representative
      </p>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <aside
    class="css-1qi9kls ewiwnhk0"
  >
    <div
      class="css-lgj0h8 ewiwnhk1"
    >
      <img
        alt="Dicta itaque nisi mollitia voluptate."
        class="css-1w3f93h-AuthorChip e1nfkf2e0"
        height="500"
        loading="lazy"
        srcset="https://picsum.photos/seed/LvB65B/800/800 800w,
https://picsum.photos/seed/za02CkUtN/500/500 500w,
https://picsum.photos/seed/ZnX7N/300/300 300w,
https://picsum.photos/seed/hLCnt1cUnM/200/200 200w"
        title="aliquid deleniti quisquam"
        width="1000"
      />
    </div>
    <div
      class="css-lgj0h8 ewiwnhk2"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
            href="https://lasting-parking.org"
          >
            Bob Cummings
          </a>
        </strong>
      </p>
    </div>
  </aside>
</DocumentFragment>
`;
